# video-server

./: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  GUIDE_INDEX.md  QUICKSTART.md  README.md  code_tour.py  config.env.example  deploy.sh  docker-build.sh  image_deploy.sh
frontend/vue-project/: package-lock.json  vite.config.js
frontend/vue-project/src/: App.vue
frontend/vue-project/src/components/: VideoClipTool.vue
src/: config.rs  handlers.rs  main.rs  models.rs  stream_handler.rs  utils.rs  video_snapshot.rs
src/api/: middleware.rs  mod.rs
src/core/: app.rs  builder.rs  config.rs  mod.rs
src/models/: app_state.rs  mod.rs  requests.rs  responses.rs
src/services/: mod.rs
src/services/notification/: feishu.rs  mod.rs
src/services/video/: mod.rs  snapshot.rs  stream_handler.rs
src/utils/: image.rs  mod.rs  system.rs
