[package]
name = "video-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls", "stream"] }

tempfile = "3.8"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
sysinfo = "0.30"